Refresh of the Base Project